test/types/records/split-init/error-never-initialized-values-not-mentioned1.chpl
class C { }

proc error() {
  // These are just never mentioned again
  var a1;
}
error();
